# kinova_stuffs

./: .gitmodules  README.md
kortex_controller_py/: package.xml  setup.cfg  setup.py
kortex_controller_py/kortex_controller_py/: command.py  joint_states_publisher.py  utilities.py
kortex_controller_py/launch/: manipulator_launch.py  robot_launch.py
kortex_controller_py/rivz/: spot.rviz
kortex_description/: CMakeLists.txt  package.xml
kortex_description/launch/: visualize_launch.py
