<?xml version="1.0"?>
<package format="3">
  <name>kortex_description</name>
  <version>2.2.2</version>
  <description>
    URDF and xacro description package for Kortex robots.
    This package contains configuration data, 3D models, and launch files
    for Kortex arms and supported grippers.
  </description>
  <maintainer email="support@kinova.ca">Kinova Support</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
